# irusu-bot

./: README.md  config.json  keep_alive.py  main.py  market.json  pyproject.toml  requirements.txt
cogs/: 8ball.py  afk.py  avatar.py  avatarMemberGuildList.py  avatarMemberList.py  avatar_guild.py  ban.py  boosters_list.py  economy.py  emoji_adder.py  fakeban.py  help.py  idGetter.py  ping.py  prefix_setter.py  serverinfo.py  troll.py  unban.py  userBanner.py  userinfo.py
slashCommands/: slashAfk.py  slashBan.py  slashInvite.py  slashPP.py  slashPing.py  slashServerInfo.py  slashUserInfo.py  userSlahsCmd.py
