[tool.poetry]
name = "python-template"
version = "0.1.0"
description = ""
authors = ["Snipy#7374"]

[tool.poetry.dependencies]
python = ">=3.8.0,<3.9"
Flask = "^2.0.3"
psutil = "^5.9.0"
discord = "^1.7.3"
motor = "^2.5.1"
nest-asyncio = "^1.5.5"
replit = "^3.2.4"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
